--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -31,26 +31,35 @@ body {
   justify-content: center;
 }
 
-#upload {
-  display: flex;
-  color: white;
-  border: thin solid $gray;
-  border-radius: 4px;
-  padding: 1rem;
-}
-
-button {
+.button {
   background: $blue;
   color: white;
   font-weight: bold;
   letter-spacing: 0.05em;
-  padding: 0.75rem 1rem;
+  padding: 0.75rem 1.5rem;
+  border: 2px solid $charcoal;
   border-radius: 4px;
+  cursor: pointer;
   display: flex;
   align-items: center;
 }
 
-button .icon {
+.button .icon {
   margin-left: -0.125em;
   margin-right: 0.25em;
+}
+
+#upload {
+  width: 0;
+}
+
+.upload-button:focus-within {
+  box-shadow: 0 0 0 1px white;
+}
+
+.upload-text {
+  display: block;
+  text-align: center;
+  color: $lightgray;
+  margin-top: 8px;
 }
