--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,7 +25,7 @@ body {
   background: $darkgray;
 }
 
-.editor {
+#editor {
   display: flex;
   flex: 1;
   align-items: center;
@@ -37,7 +37,7 @@ body {
   color: white;
   font-weight: bold;
   letter-spacing: 0.05em;
-  padding: 0.75rem 1.5rem;
+  padding: 0.75em 1.5em;
   border: 2px solid $charcoal;
   border-radius: 4px;
   cursor: pointer;
