--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,6 +23,27 @@ body {
   width: 320px;
   height: 100vh;
   background: $darkgray;
+  overflow-y: scroll;
+}
+
+.entry {
+  display: flex;
+  padding: 0.5rem 2rem;
+}
+
+.entry-thumb {
+  background: $charcoal;
+  border: thin solid $gray;
+  width: 4rem;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.entry-thumb canvas {
+  max-width: 4rem;
+  max-height: 4rem;
 }
 
 #editor {
@@ -65,8 +86,9 @@ body {
 }
 
 .upload-text {
-  display: block;
-  text-align: center;
   color: $lightgray;
+  font-size: 0.875em;
+  text-align: center;
+  display: block;
   margin-top: 8px;
 }
