--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -53,6 +53,7 @@ header {
   flex-grow: 0;
   display: flex;
   flex-direction: column;
+  border-right: thin solid $silver;
 }
 
 .sidebar-header {
@@ -73,8 +74,17 @@ header {
 }
 
 .tab:not(.-active) {
-  border-color: $silver;
+  cursor: pointer;
   color: $lightgray;
+  border-bottom-color: $silver;
+
+  &:first-child {
+    border-right-color: $silver;
+  }
+
+  &:last-child {
+    border-left-color: $silver;
+  }
 }
 
 .sidebar-entries {
