different tab views in sidebar

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,8 +7,8 @@ $lightgray: #999;
 $silver: #ccc;
 $white: #f3f3f3;
 $lightblue: #def;
-$blue: #3af;
-$darkblue: #28e;
+$blue: #68e;
+$darkblue: #36d;
 $font-sans: Inter, '-apple-system', BlinkMacSystemFont, Helvetica, Arial, sans-serif;
 $font-mono: 'Source Code Pro', Monaco, Consolas, monospace;
 $header-height: 72px;
@@ -24,6 +24,11 @@ html {
 
 body {
   color: $charcoal;
+}
+
+button {
+  cursor: pointer;
+  font-weight: bold;
 }
 
 .app {
@@ -77,7 +82,7 @@ header {
   background: $white;
   border: thin solid $silver;
   border-radius: 4px;
-  color: $gray;
+  color: $lightgray;
   padding: 8px 12px;
   display: flex;
   align-items: center;
@@ -128,10 +133,43 @@ header {
   }
 }
 
-.sidebar-entries {
+.sidebar-content {
   padding: 12px 0;
   flex: 1;
   overflow-y: auto;
+
+  &.-empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $lightgray;
+  }
+
+  .sidebar-notice {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  button.-add {
+    background: $blue;
+    color: white;
+    border: thin solid $darkblue;
+    border-radius: 4px;
+    padding: 8px 16px 8px 12px;
+    margin-top: 12px;
+    display: flex;
+    align-items: center;
+
+    &:hover {
+      background: $darkblue;
+    }
+
+    .icon {
+      margin-right: 4px;
+    }
+  }
 }
 
 .entry {
