timeline controls hover effect

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -110,7 +110,7 @@ header {
   border: thin solid $silver;
   border-radius: 4px;
   color: $lightgray;
-  padding: 8px 12px;
+  padding: 6px 12px;
   display: flex;
   align-items: center;
   flex: 1;
@@ -287,19 +287,32 @@ header {
     display: flex;
   }
 
-  .control-panel {
+  .panel {
     border: thin solid $silver;
     border-radius: 4px;
     display: flex;
     align-items: center;
+    overflow: hidden;
   }
 
-  .control-panel .icon {
-    padding: 0 8px;
-  }
-
-  .control-panel + .control-panel {
+  .panel + .panel {
     margin-left: 8px;
+  }
+
+  .panel-button {
+    padding: 0 8px;
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+
+  .panel-button:hover {
+    cursor: pointer;
+    background: $white;
+  }
+
+  .panel-button + .panel-button {
+    border-left: thin solid $silver;
   }
 
   .icon.-step-prev {
@@ -308,11 +321,6 @@ header {
 
   .icon.-step-next {
     transform: rotate(90deg);
-  }
-
-  .icon.-play {
-    border-left: thin solid $silver;
-    border-right: thin solid $silver;
   }
 
   .icon.-small {
