fix top level sprite state model

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -33,9 +33,13 @@ button {
   font-weight: bold;
   border: thin solid $darkblue;
   border-radius: 4px;
-  padding: 8px 20px 8px 16px;
+  padding: 8px 20px;
   display: flex;
   align-items: center;
+}
+
+button .icon {
+  margin-left: -4px;
 }
 
 button.-alt {
