--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -52,6 +52,19 @@ button.-alt {
   cursor: pointer;
 }
 
+::-webkit-scrollbar {
+  left: -8px;
+  width: 8px;
+  height: 8px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 4px 4px rgba(black, 0.25);
+  border-radius: 4px;
+  border: 2px solid transparent;
+}
+
 .app {
   height: 100vh;
   display: flex;
@@ -214,49 +227,49 @@ header {
       margin-right: 4px;
     }
   }
-}
 
-.entry {
-  display: flex;
-  align-items: center;
-  padding: 4px 2rem;
-
-  &:hover {
-    cursor: pointer;
-    background: $white;
-  }
-
-  &.-select {
-    background: $lightblue;
-    color: $blue;
-    font-weight: bold;
+  .entry {
+    display: flex;
+    align-items: center;
+    padding: 4px 2rem;
 
     &:hover {
-      background: #cdf;
+      cursor: pointer;
+      background: $white;
+    }
+
+    &.-select {
+      background: $lightblue;
+      color: $blue;
+      font-weight: bold;
+
+      &:hover {
+        background: #cdf;
+      }
+
+      .entry-thumb {
+        background: white;
+        border-color: $blue;
+      }
     }
 
     .entry-thumb {
-      background: white;
-      border-color: $blue;
+      background: $white;
+      border: thin solid $silver;
+      border-radius: 4px;
+      width: 4rem;
+      height: 4rem;
+      margin-right: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .entry-thumb canvas {
+      max-width: 4rem;
+      max-height: 4rem;
     }
   }
-}
-
-.entry-thumb {
-  background: $white;
-  border: thin solid $silver;
-  border-radius: 4px;
-  width: 4rem;
-  height: 4rem;
-  margin-right: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.entry-thumb canvas {
-  max-width: 4rem;
-  max-height: 4rem;
 }
 
 .sidebar-footer {
