--- a/src/styles/window.scss
+++ b/src/styles/window.scss
@@ -44,20 +44,61 @@
 }
 
 .view-toggle {
+  color: $silver;
   display: flex;
+}
+
+.view-toggle .icon.-select {
+  color: $blue;
 }
 
 .view-toggle .icon + .icon {
   margin-left: 8px;
 }
 
+.window-entrygrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
 .window-entries {
   background: $white;
   border: thin solid $silver;
   border-radius: 4px;
+  padding: 16px 12px;
   width: 100%;
-  height: 160px;
+  height: 240px;
+  overflow-x: hidden;
+  overflow-y: auto;
   margin-top: 12px;
+
+  .entry {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .entry-name {
+    margin-top: 4px;
+  }
+
+  .entry-thumb {
+    background: white;
+    border: thin solid $silver;
+    border-radius: 4px;
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .entry-thumb canvas {
+    max-width: 4rem;
+    max-height: 4rem;
+  }
 }
 
 .window-footer {
