--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,7 @@ $lightgray: #999;
 $silver: #ccc;
 $white: #f3f3f3;
 $lightblue: #def;
+$skyblue: #cdf;
 $blue: #68e;
 $darkblue: #36d;
 $font-sans: Inter, '-apple-system', BlinkMacSystemFont, Helvetica, Arial, sans-serif;
@@ -244,7 +245,7 @@ header {
       font-weight: bold;
 
       &:hover {
-        background: #cdf;
+        background: $skyblue;
       }
 
       .entry-thumb {
