--- a/src/styles/window.scss
+++ b/src/styles/window.scss
@@ -59,14 +59,14 @@
 .window-entrygrid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
+  grid-gap: 4px;
 }
 
 .window-entries {
   background: $white;
   border: thin solid $silver;
   border-radius: 4px;
-  padding: 16px 12px;
+  padding: 8px;
   width: 100%;
   height: 240px;
   overflow-x: hidden;
@@ -74,10 +74,35 @@
   margin-top: 12px;
 
   .entry {
+    border: thin solid transparent;
+    border-radius: 4px;
+    padding: 8px 6px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+
+  .entry:hover {
+    background: $silver;
+
+    .entry-thumb {
+      border-color: $lightgray;
+    }
+  }
+
+  .entry.-select {
+    background: $lightblue;
+    color: $blue;
+    border-color: $blue;
+
+    &:hover {
+      background: $skyblue;
+    }
+
+    .entry-thumb {
+      border-color: $blue;
+    }
   }
 
   .entry-name {
