--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -37,16 +37,43 @@ button {
   padding: 8px 20px;
   display: flex;
   align-items: center;
+  transition: 0.125s background,
+              0.125s color,
+              0.125s border;
 }
 
-button .icon {
-  margin-left: -4px;
+button + button {
+  margin-left: 8px;
 }
 
 button.-alt {
   background: $white;
   color: $charcoal;
   border-color: $silver;
+}
+
+button .icon {
+  margin-left: -2px;
+  margin-right: 4px;
+}
+
+button:hover {
+  cursor: pointer;
+  background: $darkblue;
+}
+
+button:focus-within, button:focus {
+  border-color: white;
+}
+
+button[disabled] {
+  background: $white;
+  color: $lightgray;
+  border-color: transparent;
+
+  &:hover {
+    cursor: default;
+  }
 }
 
 .action {
@@ -248,29 +275,36 @@ header {
         background: $skyblue;
       }
 
-      .entry-thumb {
+      .thumb {
         background: white;
         border-color: $blue;
       }
     }
 
-    .entry-thumb {
-      background: $white;
-      border: thin solid $silver;
-      border-radius: 4px;
-      width: 4rem;
-      height: 4rem;
+    .thumb {
       margin-right: 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .entry-thumb canvas {
-      max-width: 4rem;
-      max-height: 4rem;
     }
   }
+}
+
+.thumb {
+  background: $white;
+  border: thin solid $silver;
+  border-radius: 4px;
+  width: 64px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.thumb canvas {
+  max-width: 64px;
+  max-height: 64px;
+}
+
+.frames {
+  display: flex;
 }
 
 .sidebar-footer {
@@ -304,95 +338,6 @@ header {
   border: thin solid $lightgray;
 
   box-shadow: 0 8px 24px rgba(black, 0.25);
-}
-
-#timeline {
-  background: white;
-  border-top: thin solid $silver;
-  padding: 24px;
-
-  .timeline-controls {
-    display: flex;
-  }
-
-  .panel {
-    border: thin solid $silver;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-  }
-
-  .panel + .panel {
-    margin-left: 8px;
-  }
-
-  .panel-button {
-    padding: 0 8px;
-    display: flex;
-    align-items: center;
-    height: 100%;
-  }
-
-  .panel-button:hover {
-    cursor: pointer;
-    background: $white;
-  }
-
-  .panel-button + .panel-button {
-    border-left: thin solid $silver;
-  }
-
-  .icon.-step-prev {
-    transform: rotate(-90deg);
-  }
-
-  .icon.-step-next {
-    transform: rotate(90deg);
-  }
-
-  .icon.-small {
-    font-size: 20px;
-  }
-}
-
-.button {
-  background: $blue;
-  color: white;
-  font-weight: bold;
-  letter-spacing: 0.05em;
-  padding: 0.75em 1.5em;
-  border: 2px solid transparent;
-  border-radius: 4px;
-  outline: 0;
-  display: flex;
-  align-items: center;
-  transition: 0.125s background,
-              0.125s color,
-              0.125s border;
-}
-
-.button .icon {
-  margin-left: -0.125em;
-  margin-right: 0.25em;
-}
-
-.button:hover {
-  cursor: pointer;
-  background: $darkblue;
-}
-
-.button:focus-within, .button:focus {
-  border-color: white;
-}
-
-.button[disabled] {
-  background: $white;
-  color: $lightgray;
-
-  &:hover {
-    cursor: default;
-  }
 }
 
 #upload {
