--- a/src/styles/window.scss
+++ b/src/styles/window.scss
@@ -74,6 +74,7 @@
   margin-top: 12px;
 
   .entry {
+    user-select: none;
     border: thin solid transparent;
     border-radius: 4px;
     padding: 6px;
