--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -86,15 +86,14 @@ button[disabled] {
 }
 
 ::-webkit-scrollbar {
-  left: -8px;
-  width: 8px;
-  height: 8px;
+  width: 10px;
+  height: 10px;
   background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 4px 4px rgba(black, 0.25);
-  border-radius: 4px;
+  box-shadow: inset 0 0 5px 5px rgba(black, 0.25);
+  border-radius: 5px;
   border: 2px solid transparent;
 }
 
@@ -335,12 +334,24 @@ header {
   justify-content: center;
   overflow: auto;
   padding: 1rem 0 2rem;
+  position: relative;
 }
 
 #editor canvas {
   border: thin solid $lightgray;
+  box-shadow: 0 8px 16px rgba(black, 0.5);
+  image-rendering: pixelated;
+}
 
-  box-shadow: 0 8px 24px rgba(black, 0.25);
+#editor.-anims {
+  overflow: hidden;
+}
+
+#editor.-anims canvas {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(2);
 }
 
 #upload {
