edit state names

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -261,6 +261,10 @@ header {
     }
   }
 
+  input.entry-name {
+    background: white;
+  }
+
   .entry {
     display: flex;
     align-items: center;
