--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -83,6 +83,11 @@
     background: $white;
   }
 
+  .panel-button.-select {
+    background: $lightblue;
+    color: $blue;
+  }
+
   .panel-button + .panel-button {
     border-left: thin solid $silver;
   }
