--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -10,14 +10,15 @@
     background: $white;
     border: thin solid $silver;
     border-radius: 4px;
+    outline: 0;
     min-height: 96px;
-    padding: 2px;
     width: 100%;
     overflow-x: auto;
   }
 
   .frames {
     white-space: nowrap;
+    padding: 2px;
   }
 
   .frame {
