minor timeline redesign

--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -6,19 +6,23 @@
   width: 100%;
 
   .timeline-frames {
-    margin-top: 8px;
     background: $white;
     border: thin solid $silver;
     border-radius: 4px;
     outline: 0;
-    min-height: 96px;
+    padding: 2px;
+    margin-top: 8px;
     width: 100%;
+    min-height: 96px;
     overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      height: 0;
+    }
   }
 
   .frames {
     white-space: nowrap;
-    padding: 2px;
   }
 
   .frame {
@@ -26,7 +30,10 @@
     display: inline-block;
     vertical-align: top;
     padding: 2px;
-    margin-right: 2px;
+
+    &:last-child {
+      margin-right: 2px;
+    }
 
     .frame-number {
       color: $lightgray;
@@ -35,7 +42,7 @@
       text-align: center;
       font-size: 12px;
       line-height: 20px;
-      width: 20px;
+      width: 100%;
       height: 20px;
     }
 
@@ -56,7 +63,18 @@
 
     .thumb {
       border-color: $blue;
-      background: white;
+    }
+  }
+
+  .frame.-focus {
+    .frame-number {
+      background: $blue;
+      color: white;
+      border-color: $blue;
+    }
+
+    .thumb {
+      border-color: $blue;
     }
   }
 
@@ -65,11 +83,8 @@
   }
 
   .panel {
-    border: thin solid $silver;
-    border-radius: 4px;
     display: flex;
     align-items: center;
-    overflow: hidden;
   }
 
   .panel + .panel {
@@ -77,10 +92,28 @@
   }
 
   .panel-button {
+    border: thin solid $silver;
     padding: 0 8px;
     display: flex;
     align-items: center;
     height: 100%;
+  }
+
+  .panel-button:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-right-color: transparent;
+  }
+
+  .panel-button:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-left-color: transparent;
+  }
+
+  .panel-button:only-child {
+    border-left-color: $silver;
+    border-right-color: $silver;
   }
 
   .panel-button:hover {
@@ -91,10 +124,7 @@
   .panel-button.-select {
     background: $lightblue;
     color: $blue;
-  }
-
-  .panel-button + .panel-button {
-    border-left: thin solid $silver;
+    border-color: $blue;
   }
 
   .icon.-step-prev {
