--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -5,12 +5,10 @@
   padding: 24px;
   width: 100%;
 
-  .timeline-frames {
+  .timeline {
     background: $white;
     border: thin solid $silver;
     border-radius: 4px;
-    outline: 0;
-    padding: 2px;
     margin-top: 8px;
     width: 100%;
     min-height: 96px;
@@ -21,33 +19,39 @@
     }
   }
 
-  .frames {
-    white-space: nowrap;
+  .timeline-frames {
+    outline: 0;
+    border-spacing: 4px;
+  }
+
+  .frame-number {
+    color: $lightgray;
+    border: thin solid $silver;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 20px;
+    width: 100%;
+    height: 20px;
+  }
+
+  .frame-number.-select {
+    background: $lightblue;
+    color: $blue;
+    border-color: $blue;
+  }
+
+  .frame-number.-focus {
+    background: $blue;
+    color: white;
+    border-color: $blue;
   }
 
   .frame {
     cursor: pointer;
-    display: inline-block;
     vertical-align: top;
-    padding: 2px;
-
-    &:last-child {
-      margin-right: 2px;
-    }
-
-    .frame-number {
-      color: $lightgray;
-      border: thin solid $silver;
-      border-radius: 4px;
-      text-align: center;
-      font-size: 12px;
-      line-height: 20px;
-      width: 100%;
-      height: 20px;
-    }
 
     .thumb {
-      margin-top: 2px;
       background: white;
     }
   }
@@ -56,23 +60,12 @@
     border-radius: 4px;
     background: $lightblue;
 
-    .frame-number {
-      color: $blue;
-      border-color: $blue;
-    }
-
     .thumb {
       border-color: $blue;
     }
   }
 
   .frame.-focus {
-    .frame-number {
-      background: $blue;
-      color: white;
-      border-color: $blue;
-    }
-
     .thumb {
       border-color: $blue;
     }
