--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -166,7 +166,7 @@ header {
 }
 
 .sidebar {
-  flex-grow: 0;
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
 }
@@ -314,7 +314,6 @@ header {
     &.-select {
       background: $lightblue;
       color: $blue;
-      font-weight: bold;
 
       &:hover {
         background: $skyblue;
@@ -428,12 +427,9 @@ input.-sidebar-field {
 
 #editor {
   background: #e5e5e5;
-  display: flex;
   flex: 1;
-  align-items: flex-start;
-  justify-content: center;
   overflow: auto;
-  padding: 1rem 0 2rem;
+  padding: 32px;
   position: relative;
 }
 
