--- a/src/styles/window.scss
+++ b/src/styles/window.scss
@@ -44,7 +44,6 @@
 }
 
 .view-toggle {
-  color: $silver;
   display: flex;
 }
 
@@ -82,13 +81,9 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-  }
 
-  .entry:hover {
-    background: $smoke;
-
-    .thumb {
-      border-color: $lightgray;
+    &:hover {
+      background: $smoke;
     }
   }
 
@@ -108,11 +103,6 @@
 
   .entry-name {
     margin-top: 4px;
-  }
-
-  .thumb {
-    background: white;
-    border: thin solid $silver;
   }
 }
 
