select frame redux

--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -4,6 +4,7 @@
   border-top: thin solid $silver;
   padding: 16px 24px;
   width: 100%;
+  overflow: hidden;
 
   .timeline {
     background: $white;
