readd frame duration set

--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -64,6 +64,10 @@
     border-radius: 4px;
     height: 64px;
 
+    .thumb {
+      width: 100%;
+    }
+
     &:hover .thumb {
       border-color: $lightgray;
     }
