--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -328,7 +328,7 @@ header {
 }
 
 .thumb {
-  background: #ccc;
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAApklEQVR4Xu3WQQ0AIQADQdCEWjyBpjsZ+2AwQEJoO3Pv/Y3wrLXC28eYHsAPEAEdULaQErQCZrBMIAeAEAmSIAmSYLlDJEiCJFgmkARJkARJkARJsNwhEiRBEiwTSIIk+LwEzzmpA+69bQd4AD9ABHRA2UJK0AqYwTKBY3IAB3AAB5QtxAEcwAFlAjkAhEiQBEmQBMsdIkESJMEygSRIgiRIgm9L8AfNACXwHHdRTwAAAABJRU5ErkJggg==) #ccc;
   border: thin solid $gray;
   border-radius: 4px;
   width: 64px;
@@ -340,30 +340,9 @@ header {
   overflow: hidden;
 }
 
-.thumb::before, .thumb::after {
-  content: '';
-  display: block;
-  background: #999;
-  position: absolute;
-  width: 50%;
-  height: 50%;
-}
-
-.thumb::before {
-  left: 50%;
-  top: 0;
-}
-
-.thumb::after {
-  left: 0;
-  top: 50%;
-}
-
 .thumb canvas {
   max-width: 64px;
   max-height: 64px;
-  position: relative;
-  z-index: 1;
 }
 
 .sidebar-footer {
